--- a/package.json
+++ b/package.json
@@ -4,6 +4,21 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "babel-preset-stage-2": "^6.24.1",
+    "benchmark": "^2.1.4",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.1.0",
+    "karma": "^5.0.5",
+    "karma-benchmark": "^1.0.4",
+    "karma-benchmark-reporter": "^0.1.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-es6-shim": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^4.0.2",
+    "lodash": "^4.17.4",
     "normalizr": "3.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -17,12 +32,18 @@
     "styled-components": "5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --open",
+    "benchmarks": "karma start"
   },
   "devDependencies": {
-    "react-scripts": "latest"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
